--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,12 +3,18 @@
 }
 
 .app-wrapper {
-  background-color: #282c34;
+  background-color: darkgreen;
+  /*background-image: url('../../img/global_map10.png');*/
+  /*background-repeat: no-repeat;*/
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.app-wrapper a{
   color: white;
 }
