--- a/src/components/Country/country.css
+++ b/src/components/Country/country.css
@@ -1,10 +1,37 @@
 .list-item img{
     width: 50px;
     height: 30px;
-    margin-left: 10px;
+    margin-bottom: 20px;
 }
-
+.list {
+    width: 100%;
+}
 .list-item {
     list-style-type: none;
     margin-top: 20px;
+    border: white 2px solid;
+    text-align: center;
+    background: greenyellow;
+    color: black;
+}
+.form {
+    text-align: center;
+    margin-left: 70px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 38px;
+    font-size: 14px;
+    /*line-height: 1.42857143;*/
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+    /*-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+    /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+    /*transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
 }
