--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,14 +3,20 @@
 }
 
 .app-wrapper {
-  background-color: darkgreen;
-  /*background-image: url('../../img/global_map10.png');*/
-  /*background-repeat: no-repeat;*/
+  margin: 0;
+  padding: 0;
+  background: #222020;
+  height: 100%;
+  background-image: url('../../img/map_world.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /*justify-content: center;*/
   font-size: calc(10px + 2vmin);
   color: white;
 }
