--- a/src/components/Country/country.css
+++ b/src/components/Country/country.css
@@ -1,3 +1,9 @@
+.country-list-block {
+    margin: 0;
+    padding: 0 40px 30px 40px;
+    align-content: center;
+}
+
 .list-item img{
     width: 50px;
     height: 30px;
@@ -5,19 +11,28 @@
 }
 
 .list {
+    padding: 0;
+    display: inline-flex;
+    flex-direction: column;
     width: 100%;
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .list-item {
-    list-style-type: none;
     margin-top: 20px;
+    /*margin-left: 20px;*/
     border: white 2px solid;
     text-align: center;
-    background: greenyellow;
+    background: white;
+    opacity: 0.7;
     color: black;
+    height: fit-content;
+    width: 30%;
 }
 
-.list-item a{
+
+.list-item a {
     color: black;
 }
 .form {
@@ -30,14 +45,26 @@
     width: 100%;
     height: 38px;
     font-size: 14px;
-    /*line-height: 1.42857143;*/
     color: #555;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
-    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
-    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
-    /*-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
-    /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
-    /*transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+
+}
+
+.region-info {
+    display: block;
+    margin-top: 3px;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 698px) {
+    .list {
+        display: inline;
+    }
+
+    .list-item {
+        width: 100%;
+    }
 }
