--- a/src/components/CountryItem/countryItem.css
+++ b/src/components/CountryItem/countryItem.css
@@ -1,43 +1,41 @@
-.list-item img{
-    width: 50px;
-    height: 30px;
-    margin-bottom: 20px;
-}
-
-.list {
-    width: 100%;
-}
-
-.list-item {
-    list-style-type: none;
-    margin-top: 20px;
-    border: white 2px solid;
+.back-btn a{
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-weight: 300;
+    color: #FFFFFF;
+    font-family:'Roboto',sans-serif;
     text-align: center;
-    background: greenyellow;
-    color: black;
+    transition: all 0.2s;
 }
 
-.list-item a{
-    color: black;
-}
-.form {
-    text-align: center;
-    margin-left: 70px;
+.back-btn a:hover {
+    color:#000000;
+    background-color: white;
 }
 
-.form-control {
-    display: block;
-    width: 100%;
-    height: 38px;
-    font-size: 14px;
-    /*line-height: 1.42857143;*/
-    color: #555;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
-    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
-    /*-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
-    /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
-    /*transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+.country-info-block {
+    margin-left: 20px;
+    margin-top: 35px;
+}
+
+.country-info-block-img {
+    overflow: hidden;
+}
+
+.country-info-block-img img{
+    display: inline-block;
+    height: 400px;
+    width: 600px
+}
+
+@media screen and (max-width: 630px) {
+    .country-info-block-img img {
+        height: auto;
+        max-width: 100%;
+    }
 }
