--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,3 +1,22 @@
-.navbar a{
-    margin-left: 10px;
+.navbar{
+    margin-top: 1px;
+}
+.navbar a {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-weight: 300;
+    color: #FFFFFF;
+    font-family:'Roboto',sans-serif;
+    text-align: center;
+    transition: all 0.2s;
+}
+
+.navbar a:hover {
+    color:#000000;
+    background-color:#FFFFFF;
 }
