--- a/src/components/SearchForm/searchForm.css
+++ b/src/components/SearchForm/searchForm.css
@@ -1,11 +1,14 @@
 .country-search-form {
-    /*overflow: hidden;*/
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    text-align: center;
 }
 
 .form-input {
     width: 100%;
     text-align: center;
-    /*margin-left: -10px;*/
+    box-sizing: border-box;
 }
 
 .form-btn {
